Baixado o pdf aula5, feito os exercicios e exemplos de aula

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Laboratório de Desenvolvimento de Algoritmos/Aula 4/Exemplo2_Aula4/target/
 /Laboratório de Desenvolvimento de Algoritmos/Aula 4/Exercicio1_Aula4/target/
 /Laboratório de Desenvolvimento de Algoritmos/Aula 4/Exercicio2_Aula4/target/
+/Laboratório de Desenvolvimento de Algoritmos/Aula 5/Aula5/target/
+/Laboratório de Desenvolvimento de Algoritmos/Aula 5/Exercicio2_Aula5/target/
