--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /Laboratório de Desenvolvimento de Algoritmos/Aula 8/Aula08-Exercicio1/target/
+/Laboratório de Desenvolvimento de Algoritmos/Aula 9/Aula9Exercicio1/target/
+/Laboratório de Desenvolvimento de Algoritmos/Aula 9/Aula9Exemplo1/target/
