Trabalho do dia 31/10, de Java

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Laboratório de Desenvolvimento de Algoritmos/Aula 8/Aula08-Exercicio1/target/
 /Laboratório de Desenvolvimento de Algoritmos/Aula 9/Aula9Exercicio1/target/
 /Laboratório de Desenvolvimento de Algoritmos/Aula 9/Aula9Exemplo1/target/
+/Técnicas de Desenvolvimento de Algoritmos/prova/Questao7/target/
+/Técnicas de Desenvolvimento de Algoritmos/prova/Questao8/target/
+/Laboratório de Desenvolvimento de Algoritmos/Trabalho_Revendedora_Carro_32130023/target/
