Aula 10 exercicios e arrumar trabalho de java

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /Técnicas de Desenvolvimento de Algoritmos/prova/Questao7/target/
 /Técnicas de Desenvolvimento de Algoritmos/prova/Questao8/target/
 /Laboratório de Desenvolvimento de Algoritmos/Trabalho_Revendedora_Carro_32130023/target/
+/1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula10/Aula10-Exercicio1/target/
+/1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula10/Aula10-Exercicio2/target/
+/1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula10/Aula10-Exercicio3/target/
+/1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula10/Aula10Exercicio4/target/
