Prova e atividade algoritmo

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula 11/Aula11/target/
 /1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula 11/Aula11Exercicio3/target/
 /1 Semestre/Laboratório de Desenvolvimento de Algoritmos/Aula 11/Aula11Exercicio5/target/
+/1 Semestre/Técnicas de Desenvolvimento de Algoritmos/ProvaAlgoritmoQuestaoFuncao/target/
